[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/Components/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/DuckManAni.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/RaccoonSerif.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sprites/DeathOfADuck.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 26 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 22, 0, 22, 26 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 44, 0, 22, 26 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 21, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 42, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 63, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 84, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 105, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 126, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 147, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 168, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 189, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 210, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 231, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 252, 0, 21, 26 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 22, 0, 22, 26 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.50104, 12.7549 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.21385, 12.6232 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
SPEED = 120
GRAVITY = 1200
JUMP_FORCE = -450

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.10912, -0.762887 )
shape = SubResource( 3 )

[node name="dialogue" type="Label" parent="."]
visible = false
margin_left = 1.87288
margin_top = -24.7221
margin_right = 41.8729
margin_bottom = -10.7221
custom_fonts/font = ExtResource( 3 )
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 4.0
editor_draw_limits = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.00001, -0.504104 )
shape = SubResource( 4 )

[connection signal="timeout" from="dialogue_timer" to="." method="_on_dialogue_timer_timeout"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
